Add minimal links to GitHub code repositories

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,8 @@
         <a class="page-link" href="{{ site.baseurl }}/download/">Download</a>
         -->
         <a class="page-link"><font color="gray">Documentation</font></a>
-        <a class="page-link"><font color="gray">Source code</font></a>
+        <a class="page-link"
+          href="{{ site.baseurl }}/source-code/">Source Code</a>
         <a class="page-link" href="{{ site.baseurl }}/community/">Community</a>
         <a class="page-link"
         <a class="page-link"><font color="gray">Contributing</font></a>
