Import folio-base.scss first, and folio.scss at end

--- a/css/main.scss
+++ b/css/main.scss
@@ -47,7 +47,9 @@ $on-laptop:        800px;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
+        "folio-base",
         "base",
         "layout",
-        "syntax-highlighting"
+        "syntax-highlighting",
+        "folio"
 ;
