Use font "myriad pro"
Obtained from folio_brandidentity_guidelines_0616.pdf and from the
folio.org website.

--- a/_sass/_folio-base.scss
+++ b/_sass/_folio-base.scss
@@ -1,3 +1,6 @@
+$base-font-family: "myriad-pro-n3", "myriad-pro", sans-serif;
+$base-font-weight: 300;
+
 $f-color-orange:   #da6a2d;
 $f-color-purple:   #38307f;
 $f-color-dgray:    #515251;
