--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,14 @@
+{% capture this_page_title %}
+{% if page.url == '/' or page.title == nil %} {{ site.title }}
+{% else %} {{ page.title | prepend: ' | ' | prepend: site.title }}
+{% endif %}
+{% endcapture %}
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
+  <title>{{ this_page_title | escape | strip}}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
