Use main logo in footer column 1

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,9 +4,9 @@
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
+        <a href="http://folio.org/">
+          <img alt="FOLIO logo" src="{{"/images/FOLIO_logo.png" | prepend: site.baseurl }}" title="folio.org | The Future of Libraries is Open">
+        </a>
       </div>
 
       <div class="footer-col footer-col-2">
