Use purple section headings and top border

--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -1,7 +1,7 @@
 .site-header {
-    border-top: 5px solid $f-color-orange;
-    //border-top: 5px solid $f-color-purple;
-    border-bottom: 1px solid $f-color-orange;
+    //border-top: 5px solid $f-color-orange;
+    border-top: 5px solid $f-color-purple;
+    border-bottom: 1px solid $f-color-purple;
 }
 
 .site-title {
@@ -19,7 +19,7 @@
 }
 
 h1, h2, h3, h4, h5, h6 {
-    color: $f-color-orange;
+    color: $f-color-purple;
 }
 
 .site-footer {
