--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
-<header class="site-header">
+<header class="site-header" role="banner">
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title | escape }}</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
