Add content for first round of website

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,18 +14,26 @@
       </a>
 
       <div class="trigger">
+        <!--
         <a class="page-link"><font color="gray">About</font></a>
+        -->
         <!--
         <a class="page-link" href="{{ site.baseurl }}/blog/">Blog</a>
         -->
         <!--
         <a class="page-link" href="{{ site.baseurl }}/download/">Download</a>
         -->
-        <a class="page-link"><font color="gray">Documentation</font></a>
         <a class="page-link"
           href="{{ site.baseurl }}/source-code/">Source Code</a>
+        <a class="page-link" href="{{ site.baseurl }}/doc/"> Documentation </a>
         <a class="page-link" href="{{ site.baseurl }}/community/">Community</a>
+        <!--
         <a class="page-link"><font color="gray">Contributing</font></a>
+        -->
+        <a class="page-link"
+	   href="{{ site.baseurl }}/community/contrib-code.html">
+	     Contributing
+	</a>
         <!--
         <a class="page-link" href="{{ site.baseurl }}/continuing-integration/">
           Continuing integration</a>
