--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,13 @@
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
+        <ul class="contact-list">
+          <!--
+          <li>{{ site.title }}</li>
+          -->
+          <li>&copy; 2016 The Open Library Foundation</li>
+          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+        </ul>
       </div>
 
       <div class="footer-col footer-col-2">
