--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,17 +27,14 @@
           href="{{ site.baseurl }}/source-code/">Source Code</a>
         <a class="page-link" href="{{ site.baseurl }}/doc/"> Documentation </a>
         <a class="page-link" href="{{ site.baseurl }}/community/">Community</a>
-        <a class="page-link"
-	   href="{{ site.baseurl }}/community/contrib-code.html">
-	     Contributing
-	</a>
+        <a class="page-link" href="{{ site.baseurl }}/community/contrib-code">
+          Contributing
+        </a>
         <!--
         <a class="page-link" href="{{ site.baseurl }}/continuing-integration/">
           Continuing integration</a>
         -->
       </div>
     </nav>
-
   </div>
-
 </header>
