Add pure-drawer container divs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,23 @@
     {% include header.html %}
 
     <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
+    <div class="pure-container" data-effect="pure-effect-slide">
+      <input type="checkbox" id="pure-toggle-left" class="pure-toggle" data-toggle="left">
+      <label class="pure-toggle-label" for="pure-toggle-left" data-toggle-label="left">
+        <span class="pure-toggle-icon"></span>
+      </label>
+      <div class="pure-drawer" data-position="left">
+        {% include nav-drawer.html %}
       </div>
+      <div class="pure-pusher-container">
+        <div class="pure-pusher">
+          <div class="wrapper">
+            {{ content }}
+          </div>
+        </div>
+      </div>
+      <label class="pure-overlay" for="pure-toggle-left" data-overlay="left"></label>
+    </div>
     </main>
 
     {% include footer.html %}
