Add basic style pure-drawer

--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -40,3 +40,15 @@ code {
   border: 1px solid $f-color-light-grey;
   background-color: $f-color-lighter-grey;
 }
+
+.f-drawer-nav {
+  float: right;
+  font-size: $base-font-size;
+  .drawer-link {
+    color: $f-color-purple;
+  }
+}
+
+.pure-drawer {
+  background-color: $f-color-light-grey;
+}
