--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,26 +14,29 @@
       </span>
 
       <div class="trigger">
-        <!--
-        <a class="page-link"><font color="gray">About</font></a>
-        -->
-        <!--
-        <a class="page-link" href="{{ site.baseurl }}/blog/">Blog</a>
-        -->
-        <!--
-        <a class="page-link" href="{{ site.baseurl }}/download/">Download</a>
-        -->
+        <a class="page-link" href="https://www.folio.org"> folio.org </a>
+        <a class="page-link" href="https://wiki.folio.org"> Wiki </a>
+        <a class="page-link" href="https://wiki.folio.org/display/PC/Special+Interest+Groups"
+           title="Special Interest Groups"> SIGs </a>
+        <a class="page-link" href="http://discuss.folio.org"> Discuss </a>
+        <a class="page-link" href="http://ux.folio.org"
+           title="User Experience design"> UX </a>
+        <a class="page-link" href="http://dev.folio.org"> Dev </a>
+      </div>
+      <div class="trigger">
         <a class="page-link"
-          href="{{ site.baseurl }}/source-code/">Source Code</a>
-        <a class="page-link" href="{{ site.baseurl }}/doc/"> Documentation </a>
+          href="{{ site.baseurl }}/doc/ref">Ref</a>
+        <a class="page-link"
+          href="{{ site.baseurl }}/source-code/">Source</a>
+        <a class="page-link" href="{{ site.baseurl }}/doc/"> Doc </a>
+        <a class="page-link" href="{{ site.baseurl }}/doc/guides"> Guides </a>
         <a class="page-link" href="{{ site.baseurl }}/community/">Community</a>
         <a class="page-link" href="{{ site.baseurl }}/community/contrib-code">
           Contributing
         </a>
-        <!--
-        <a class="page-link" href="{{ site.baseurl }}/continuing-integration/">
-          Continuing integration</a>
-        -->
+        <a class="page-link" href="{{ site.baseurl }}/news/"
+          title="News">
+          News</a>
       </div>
     </nav>
   </div>
