Move nav toggler to right-side
Less annoying on smaller screens

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,11 +9,11 @@
 
     <main class="page-content" aria-label="Content">
     <div class="pure-container" data-effect="pure-effect-slide">
-      <input type="checkbox" id="pure-toggle-left" class="pure-toggle" data-toggle="left">
-      <label class="pure-toggle-label" for="pure-toggle-left" data-toggle-label="left">
+      <input type="checkbox" id="pure-toggle-right" class="pure-toggle" data-toggle="right">
+      <label class="pure-toggle-label" for="pure-toggle-right" data-toggle-label="right">
         <span class="pure-toggle-icon"></span>
       </label>
-      <div class="pure-drawer" data-position="left">
+      <div class="pure-drawer" data-position="right">
         {% include nav-drawer.html %}
       </div>
       <div class="pure-pusher-container">
@@ -23,7 +23,7 @@
           </div>
         </div>
       </div>
-      <label class="pure-overlay" for="pure-toggle-left" data-overlay="left"></label>
+      <label class="pure-overlay" for="pure-toggle-right" data-overlay="right"></label>
     </div>
     </main>
 
