Add bottom-spacer for api docs table FOLIO-672

--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -40,3 +40,7 @@ code {
   border: 1px solid $f-color-light-grey;
   background-color: $f-color-lighter-grey;
 }
+
+#bottom-spacer {
+  padding-bottom: 50em;
+}
