--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -15,6 +15,10 @@
 
   .page-link {
     color: $f-color-purple;
+    // Gaps between nav items, but not on the last one
+    &:not(:last-child) {
+      margin-right: 15px;
+    }
   }
   line-height: $base-line-height * $base-font-size * 1.25;
 }
