Adjust content of top nav bars FOLIO-646

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,8 @@
         <a class="page-link" href="https://wiki.folio.org/display/PC/Special+Interest+Groups"
            title="Special Interest Groups">SIGs</a>
         <a class="page-link" href="http://discuss.folio.org">Discuss</a>
-        <a class="page-link" href="http://dev.folio.org">Dev</a>
+        <a class="page-link" href="http://issues.folio.org">Issues</a>
+        <a class="page-link" href="http://dev.folio.org">Developer</a>
       </div>
       <div class="trigger">
         <a class="page-link"
@@ -31,11 +32,13 @@
           href="{{ site.baseurl }}/source-code/">Source</a>
         <a class="page-link" href="{{ site.baseurl }}/doc/artifacts">Download</a>
         <a class="page-link" href="{{ site.baseurl }}/doc/">Doc</a>
-        <a class="page-link" href="{{ site.baseurl }}/doc/guides">Guides</a>
         <a class="page-link" href="{{ site.baseurl }}/community/">Community</a>
         <a class="page-link" href="{{ site.baseurl }}/community/contrib-code">
           Contributing
         </a>
+<!--
+        <a class="page-link" href="/search">Search</a>
+-->
       </div>
     </nav>
   </div>
