--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -46,6 +46,19 @@ code {
   background-color: $f-color-lighter-grey;
 }
 
+table {
+  border-collapse: collapse;
+}
+table, th, td {
+  border: 1px solid $f-color-light-grey;
+}
+th, td {
+  padding: 3px;
+}
+th {
+  background-color: $f-color-lighter-grey;
+}
+
 :target {
   border-left: 5px solid $f-color-orange;
 }
