Improve demo of navigation content FOLIO-644

--- a/_includes/nav-drawer.html
+++ b/_includes/nav-drawer.html
@@ -5,7 +5,7 @@
         <a class="drawer-link" href="/"> Overview </a>
       </li>
       <li>
-        <a class="drawer-link" href="/doc/ref"> Reference </a>
+        <a class="drawer-link" href="/doc/reference"> Reference </a>
         <ul>
           <li>
             <a class="drawer-link" href="/doc/api"> API documentation </a>
@@ -24,17 +24,45 @@
         </ul>
       </li>
       <li>
+        <a class="drawer-link" href="/doc/artifacts"> Download </a>
+      </li>
+      <li>
         <a class="drawer-link" href="/doc/"> Documentation </a>
       </li>
       <li>
-        <a class="drawer-link" href="/doc/guides"> Guides </a>
+        <a class="drawer-link" href="/doc/#guides"> Guides </a>
+        <ul>
+          <li>
+            <a class="drawer-link" href="/doc/#background-orientation"> Background orientation </a>
+          </li>
+          <li>
+            <a class="drawer-link" href="/doc/#setup-and-configuration"> Setup and configuration </a>
+          </li>
+          <li>
+            <a class="drawer-link" href="/doc/#getting-started"> Getting started </a>
+          </li>
+          <li>
+            <a class="drawer-link" href="/doc/#reference-documentation"> Reference documentation </a>
+          </li>
+          <li>
+            <a class="drawer-link" href="/doc/#development-tips"> Development tips </a>
+          </li>
+          <li>
+            <a class="drawer-link" href="/doc/#tutorials"> Tutorials </a>
+          </li>
+          <li>
+            <a class="drawer-link" href="/doc/#development-management"> Development management </a>
+          </li>
+          <li>
+            <a class="drawer-link" href="/doc/#community"> Community </a>
+          </li>
+          <li>
+            <a class="drawer-link" href="/doc/#other-topics"> Other topics </a>
+          </li>
+        </ul>
       </li>
-    </ul>
-    <hr/>
-    <ul>
       <li>
-        <a class="drawer-link" href="http://ux.folio.org"
-           title="User Experience design"> UX </a>
+        <a class="drawer-link" href="/community/contrib-code"> Guidelines for Contributing Code </a>
       </li>
     </ul>
   </div>
