Improve demo of navigation content FOLIO-644

--- a/_includes/nav-drawer.html
+++ b/_includes/nav-drawer.html
@@ -10,18 +10,27 @@
           <li>
             <a class="drawer-link" href="/doc/api"> API documentation </a>
           </li>
+        </ul>
+      </li>
+      <li>
+        <a class="drawer-link" href="/source-code"> Source code </a>
+        <ul>
           <li>
-            <a class="drawer-link" href="/source-code"> Source code </a>
-            <ul>
-              <li>
-                <a class="drawer-link" href="/source-code#server-side"> Server-side </a>
-              </li>
-              <li>
-                <a class="drawer-link" href="/source-code#client-side"> Client-side </a>
-              </li>
-            </ul>
+            <a class="drawer-link" href="/source-code#server-side"> Server-side </a>
+          </li>
+          <li>
+            <a class="drawer-link" href="/source-code#client-side"> Client-side </a>
+          </li>
+          <li>
+            <a class="drawer-link" href="/source-code#other-projects"> Other projects </a>
           </li>
         </ul>
+      </li>
+      <li>
+        <a class="drawer-link" href="/community/#collaboration-tools"
+          title="Issues, Discuss, Slack, Wiki, etc.">
+          Collaboration tools
+        </a>
       </li>
       <li>
         <a class="drawer-link" href="/doc/artifacts"> Download </a>
