Use classic-jekyll-theme in main.scss
Our _sass/folio stuff will later need to be rationalised,
as it was done for minima theme.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -8,7 +8,7 @@
 // Import the theme.
 // It will set other variables that are not already set.
 // It will provide the rules.
-@import "minima";
+@import "classic-jekyll-theme";
 
 // Provide our rules.
 @import "folio";
