Set menu-alignment and add nav title

--- a/_includes/navbanner.html
+++ b/_includes/navbanner.html
@@ -27,6 +27,9 @@
   {% assign topTitles = topTitles | uniq %}
 
   <!-- Using the above list, create the menu and submenu's -->
+  <p class="f-navbar-title">
+    FOLIO Developer:
+  </p>
   <ul>
 
     <!-- Home page -->
