--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -65,3 +65,10 @@ th {
 tr:target td:first-child {
   border-left: 5px solid $f-color-orange;
 }
+
+// Add for testing classic-jekyll-theme
+.f-navbar-title {
+  padding: 0;
+  margin: 0;
+  font-size: $base-font-size;
+}
