Add the top-level navigation bar FOLIO-714
Using the provided content from FOLIO-714.
Content is not yet complete.

--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -59,3 +59,9 @@ tr:target td:first-child {
   margin: 0;
   font-size: $base-font-size;
 }
+
+.page-title {
+  text-align: center;
+  margin-top: $vspacing-unit;
+  margin-bottom: $vspacing-unit;
+}
