Utilise theme ability "Home" link each navbar

--- a/_includes/folio-navbar.html
+++ b/_includes/folio-navbar.html
@@ -1,11 +1,20 @@
 <nav class="navbanner-menu">
-  <p class="f-navbar-title">
-    FOLIO:
-  </p>
   <ul>
     <li>
       <input type="checkbox" id="f1-checkbox">
       <label for="f1-checkbox">
+        <div class="menu-item-separator"><p><!-- empty but necessary --></p></div>
+        <div class="menu-item">
+          <div class="menu-item-symbol"></div>
+          <div class="menu-item-title">
+            <a href="https://www.folio.org/"><p>FOLIO</p></a>
+          </div>
+        </div>
+      </label>
+    </li>
+    <li>
+      <input type="checkbox" id="f2-checkbox">
+      <label for="f2-checkbox">
         <div class="menu-item-separator"><p><!-- empty but necessary --></p></div>
         <div class="menu-item">
           <div class="menu-item-symbol"><p><!-- will be filled by disclosure indicator --></p></div>
@@ -34,8 +43,8 @@
       </ul>
     </li>
     <li>
-      <input type="checkbox" id="f2-checkbox">
-      <label for="f2-checkbox">
+      <input type="checkbox" id="f3-checkbox">
+      <label for="f3-checkbox">
         <div class="menu-item-separator"><p><!-- empty but necessary --></p></div>
         <div class="menu-item">
           <div class="menu-item-symbol"></div>
@@ -46,8 +55,8 @@
       </label>
     </li>
     <li>
-      <input type="checkbox" id="f3-checkbox">
-      <label for="f3-checkbox">
+      <input type="checkbox" id="f4-checkbox">
+      <label for="f4-checkbox">
         <div class="menu-item-separator"><p><!-- empty but necessary --></p></div>
         <div class="menu-item">
           <div class="menu-item-symbol"></div>
@@ -58,8 +67,8 @@
       </label>
     </li>
     <li>
-      <input type="checkbox" id="f4-checkbox">
-      <label for="f4-checkbox">
+      <input type="checkbox" id="f5-checkbox">
+      <label for="f5-checkbox">
         <div class="menu-item-separator"><p><!-- empty but necessary --></p></div>
         <div class="menu-item">
           <div class="menu-item-symbol"><p><!-- will be filled by disclosure indicator --></p></div>
@@ -96,8 +105,8 @@
       </ul>
     </li>
     <li>
-      <input type="checkbox" id="f5-checkbox">
-      <label for="f5-checkbox">
+      <input type="checkbox" id="f6-checkbox">
+      <label for="f6-checkbox">
         <div class="menu-item-separator"><p><!-- empty but necessary --></p></div>
         <div class="menu-item">
           <div class="menu-item-symbol"><p><!-- will be filled by disclosure indicator --></p></div>
@@ -118,8 +127,8 @@
       </ul>
     </li>
     <li>
-      <input type="checkbox" id="f6-checkbox">
-      <label for="f6-checkbox">
+      <input type="checkbox" id="f7-checkbox">
+      <label for="f7-checkbox">
         <div class="menu-item-separator"><p><!-- empty but necessary --></p></div>
         <div class="menu-item">
           <div class="menu-item-symbol"><p><!-- will be filled by disclosure indicator --></p></div>
