Use same link and visited color as current
From minima

--- a/_sass/_folio-base.scss
+++ b/_sass/_folio-base.scss
@@ -6,3 +6,4 @@ $f-color-purple: #38307f;
 $f-color-dark-grey: #515251;
 $f-color-light-grey: #737272;
 $f-color-lighter-grey: lighten($f-color-light-grey, 50%);
+$f-link-color: #2a7ae2; // from minima
