--- a/_sass/_folio.scss
+++ b/_sass/_folio.scss
@@ -1,28 +1,3 @@
-.site-header {
-  border-top: 5px solid $f-color-purple;
-  border-bottom: 1px solid $f-color-purple;
-}
-
-.site-title {
-  &,
-  &:visited {
-    color: $f-color-orange;
-  }
-}
-
-.site-nav {
-  font-size: $small-font-size;
-
-  .page-link {
-    color: $f-color-purple;
-    // Gaps between nav items, but not on the last one
-    &:not(:last-child) {
-      margin-right: 15px;
-    }
-  }
-  line-height: $base-line-height * $base-font-size * 1.25;
-}
-
 .highlighter-rouge pre.highlight {
   background-color: $f-color-lighter-grey;
 }
@@ -59,13 +34,14 @@ tr:target td:first-child {
   border-left: 5px solid $f-color-orange;
 }
 
-// Add for testing classic-jekyll-theme
+// Reduce vertical whitespace
 .page-title {
   text-align: center;
   margin-top: $vspacing-unit;
   margin-bottom: $vspacing-unit;
 }
 
+// Set our link and visited colors
 a {
   color: $f-link-color;
   text-decoration: none;
