Add news blog to top navbar FOLIO-714

--- a/_includes/folio-navbar.html
+++ b/_includes/folio-navbar.html
@@ -154,6 +154,14 @@
             </div>
           </div>
         </li>
+        <li>
+          <div class="menu-subitem">
+            <div class="menu-subitem-symbol"></div>
+            <div class="menu-subitem-title">
+              <a href="https://folio.org/news/"><p>Blog</p></a>
+            </div>
+          </div>
+        </li>
       </ul>
     </li>
   </ul>
