Adjust top navbar content FOLIO-714

--- a/_includes/folio-navbar.html
+++ b/_includes/folio-navbar.html
@@ -5,21 +5,9 @@
       <label for="f1-checkbox">
         <div class="menu-item-separator"><p><!-- empty but necessary --></p></div>
         <div class="menu-item">
-          <div class="menu-item-symbol"></div>
-          <div class="menu-item-title">
-            <a href="https://www.folio.org/"><p>FOLIO</p></a>
-          </div>
-        </div>
-      </label>
-    </li>
-    <li>
-      <input type="checkbox" id="f2-checkbox">
-      <label for="f2-checkbox">
-        <div class="menu-item-separator"><p><!-- empty but necessary --></p></div>
-        <div class="menu-item">
           <div class="menu-item-symbol"><p><!-- will be filled by disclosure indicator --></p></div>
           <div class="menu-item-title">
-            <p>About</p></a>
+            <p>FOLIO.org</p></a>
           </div>
         </div>
       </label>
@@ -28,7 +16,7 @@
           <div class="menu-subitem">
             <div class="menu-subitem-symbol"></div>
             <div class="menu-subitem-title">
-              <a href="https://www.openlibraryenvironment.org/"><p>OLE</p></a>
+              <a href="https://www.folio.org/"><p>About</p></a>
             </div>
           </div>
         </li>
@@ -36,39 +24,39 @@
           <div class="menu-subitem">
             <div class="menu-subitem-symbol"></div>
             <div class="menu-subitem-title">
-              <a href="https://wiki.folio.org/display/PC/FOLIO+Product+Council+Charge"><p>Mission</p></a>
+              <a href="https://wiki.folio.org/display/PC/FOLIO+Roadmap"><p>Platform and Roadmap</p></a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="menu-subitem">
+            <div class="menu-subitem-symbol"></div>
+            <div class="menu-subitem-title">
+              <a href="https://folio.org/news/"><p>News</p></a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="menu-subitem">
+            <div class="menu-subitem-symbol"></div>
+            <div class="menu-subitem-title">
+              <a href="https://www.openlibraryenvironment.org/archives/category/olfforum"><p>Events</p></a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="menu-subitem">
+            <div class="menu-subitem-symbol"></div>
+            <div class="menu-subitem-title">
+              <a href="https://www.folio.org/community/"><p>Join the Community</p></a>
             </div>
           </div>
         </li>
       </ul>
     </li>
     <li>
-      <input type="checkbox" id="f3-checkbox">
-      <label for="f3-checkbox">
-        <div class="menu-item-separator"><p><!-- empty but necessary --></p></div>
-        <div class="menu-item">
-          <div class="menu-item-symbol"></div>
-          <div class="menu-item-title">
-            <a href="https://www.folio.org/community/"><p>Community</p></a>
-          </div>
-        </div>
-      </label>
-    </li>
-    <li>
-      <input type="checkbox" id="f4-checkbox">
-      <label for="f4-checkbox">
-        <div class="menu-item-separator"><p><!-- empty but necessary --></p></div>
-        <div class="menu-item">
-          <div class="menu-item-symbol"></div>
-          <div class="menu-item-title">
-            <a href="https://wiki.folio.org/display/PC/FOLIO+Roadmap"><p>Roadmap</p></a>
-          </div>
-        </div>
-      </label>
-    </li>
-    <li>
-      <input type="checkbox" id="f5-checkbox">
-      <label for="f5-checkbox">
+      <input type="checkbox" id="f2-checkbox">
+      <label for="f2-checkbox">
         <div class="menu-item-separator"><p><!-- empty but necessary --></p></div>
         <div class="menu-item">
           <div class="menu-item-symbol"><p><!-- will be filled by disclosure indicator --></p></div>
@@ -82,7 +70,7 @@
           <div class="menu-subitem">
             <div class="menu-subitem-symbol"></div>
             <div class="menu-subitem-title">
-              <a href="http://dev.folio.org/"><p>dev.folio.org</p></a>
+              <a href="http://dev.folio.org/doc/"><p>Documentation</p></a>
             </div>
           </div>
         </li>
@@ -90,7 +78,7 @@
           <div class="menu-subitem">
             <div class="menu-subitem-symbol"></div>
             <div class="menu-subitem-title">
-              <a href="http://dev.folio.org/source-code/"><p>Code</p></a>
+              <a href="http://dev.folio.org/source-code/"><p>Source Code</p></a>
             </div>
           </div>
         </li>
@@ -98,71 +86,51 @@
           <div class="menu-subitem">
             <div class="menu-subitem-symbol"></div>
             <div class="menu-subitem-title">
-              <a href="https://issues.folio.org/"><p>Tracker</p></a>
+              <a href="https://folio-project.slack.com/"><p>Chat</p></a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="menu-subitem">
+            <div class="menu-subitem-symbol"></div>
+            <div class="menu-subitem-title">
+              <a href="https://slack-invitation.folio.org/"><p>Chat (Sign Up)</p></a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="menu-subitem">
+            <div class="menu-subitem-symbol"></div>
+            <div class="menu-subitem-title">
+              <a href="https://issues.folio.org/"><p>Issue Tracker</p></a>
             </div>
           </div>
         </li>
       </ul>
     </li>
     <li>
-      <input type="checkbox" id="f6-checkbox">
-      <label for="f6-checkbox">
+      <input type="checkbox" id="f3-checkbox">
+      <label for="f3-checkbox">
         <div class="menu-item-separator"><p><!-- empty but necessary --></p></div>
         <div class="menu-item">
-          <div class="menu-item-symbol"><p><!-- will be filled by disclosure indicator --></p></div>
+          <div class="menu-item-symbol"></div>
           <div class="menu-item-title">
-            <p>Documentation</p></a>
+            <a href="https://wiki.folio.org/"><p>Project Wiki</p></a>
           </div>
         </div>
       </label>
-      <ul>
-        <li>
-          <div class="menu-subitem">
-            <div class="menu-subitem-symbol"></div>
-            <div class="menu-subitem-title">
-              <a href="https://wiki.folio.org/"><p>Wiki</p></a>
-            </div>
-          </div>
-        </li>
-      </ul>
     </li>
     <li>
-      <input type="checkbox" id="f7-checkbox">
-      <label for="f7-checkbox">
+      <input type="checkbox" id="f4-checkbox">
+      <label for="f4-checkbox">
         <div class="menu-item-separator"><p><!-- empty but necessary --></p></div>
         <div class="menu-item">
-          <div class="menu-item-symbol"><p><!-- will be filled by disclosure indicator --></p></div>
+          <div class="menu-item-symbol"></div>
           <div class="menu-item-title">
-            <p>News</p></a>
+            <a href="https://discuss.folio.org/"><p>Discussion Boards</p></a>
           </div>
         </div>
       </label>
-      <ul>
-        <li>
-          <div class="menu-subitem">
-            <div class="menu-subitem-symbol"></div>
-            <div class="menu-subitem-title">
-              <a href="https://www.openlibraryenvironment.org/archives/category/olfforum"><p>Events</p></a>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="menu-subitem">
-            <div class="menu-subitem-symbol"></div>
-            <div class="menu-subitem-title">
-              <a href="https://twitter.com/folio_lsp"><p>Twitter</p></a>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="menu-subitem">
-            <div class="menu-subitem-symbol"></div>
-            <div class="menu-subitem-title">
-              <a href="https://folio.org/news/"><p>Blog</p></a>
-            </div>
-          </div>
-        </li>
-      </ul>
     </li>
   </ul>
 </nav>
