Include top-level navigation bar

--- a/_includes/navbanner.html
+++ b/_includes/navbanner.html
@@ -13,6 +13,9 @@
 <!-- Separator between banner and navigation bar. Visibility depends on screen width. -->
 <div class="nav-top-divider"></div>
 
+<!-- Include FOLIO top-level navigation bar -->
+{% include folio-navbar.html %}
+
 <!-- Navigation bar visibility depends on screen width. -->
 <nav class="navbanner-menu">
 
