--- a/_includes/navbanner.html
+++ b/_includes/navbanner.html
@@ -156,7 +156,7 @@
 								{% if ape.menuLink == false %}
 									<p>{{ topTitle }}</p>
 								{% else %}
-									<a href="{{ ape.url }}"><p>{{ topTitle }}</p></a>
+									<a href="{{ ape.url | remove: ".html" }}"><p>{{ topTitle }}</p></a>
 								{% endif %}
 								{% assign pageFound == true %}
 								{% break %}
@@ -178,7 +178,7 @@
 							<div class="menu-subitem">
 								<div class="menu-subitem-symbol"></div>
 								<div class="menu-subitem-title">
-									<a href="{{ sortedSubMenuUrls[forloop.index0] }}"><p>{{ subTitle }}</p></a>
+									<a href="{{ sortedSubMenuUrls[forloop.index0] | remove: ".html" }}"><p>{{ subTitle }}</p></a>
 								</div>
 							</div>
 						</li>
@@ -220,7 +220,7 @@
 						<div class="menu-subitem">
 							<div class="menu-subitem-symbol"></div>
 							<div class="menu-subitem-title">
-								<a href="{{ cat.url }}"><p>{{ cat.title | capitalize }}</p></a>
+								<a href="{{ cat.url | remove: ".html" }}"><p>{{ cat.title | capitalize }}</p></a>
 							</div>
 						</div>
 					</li>
