--- a/_includes/js_files.html
+++ b/_includes/js_files.html
@@ -1,6 +1,6 @@
 <script>
   var baseurl = '{{ site.baseurl }}'
 </script>
-<script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="https://cdn.jsdelivr.net/jquery/3.2.1/jquery.min.js"></script>
 <script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }} "></script>
 <script src="{{ "/js/main.js" | prepend: site.baseurl }} "></script>
